ass9 is updated

--- a/Assignment9.ipynb
+++ b/Assignment9.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assignment 9: Optimization Algorithms and Convolution Neural Networks (deadline: 12 Jan, 23:59)"
+    "# Assignment 9: Optimization Algorithms and Convolution Neural Networks (deadline: 13 Jan, 23:59)"
    ]
   },
   {
@@ -30,7 +30,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# imports\n",
@@ -72,7 +74,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# params of our error surface `z`\n",
@@ -93,7 +97,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X_sparse, Y_sparse = np.meshgrid(range_x, range_y)\n",
@@ -117,7 +123,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# x,y values for `Wireframe` plot\n",
@@ -162,7 +170,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# The following variables  will come in handy when implementing the error surface using tensorflow functions below\n",
@@ -201,7 +211,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# starting position\n",
@@ -253,14 +265,6 @@
     "opt_mom_points_y.append(start_y)\n",
     "opt_mom_points_z.append(func_z(start_x,start_y))\n",
     "\n",
-    "print('RMSProp Optimization started')\n",
-    "for step in range(n_steps):\n",
-    "    session.run(tf_rms_optimize_z)\n",
-    "    x, y, z = session.run([tf_x, tf_y, tf_z])    \n",
-    "    opt_rms_points_x.append(x)\n",
-    "    opt_rms_points_y.append(y)\n",
-    "    opt_rms_points_z.append(z)\n",
-    "\n",
     "\n",
     "print(\"Nesterov's Momentum Optimization started\")\n",
     "for step in range(n_steps):\n",
@@ -277,6 +281,14 @@
     "opt_rms_points_x.append(start_x)\n",
     "opt_rms_points_y.append(start_y)\n",
     "opt_rms_points_z.append(func_z(start_x,start_y))\n",
+    "\n",
+    "print('RMSProp Optimization started')\n",
+    "for step in range(n_steps):\n",
+    "    session.run(tf_rms_optimize_z)\n",
+    "    x, y, z = session.run([tf_x, tf_y, tf_z])    \n",
+    "    opt_rms_points_x.append(x)\n",
+    "    opt_rms_points_y.append(y)\n",
+    "    opt_rms_points_z.append(z)\n",
     "\n",
     "\n",
     "# Run AdaGrad on Error Surface\n",
@@ -313,8 +325,8 @@
     "Above optimizer outputs will be plotted in a single plot using the code below showing the path from the starting point to the minima. <br>\n",
     "\n",
     "$\\color{red}{Note}$: The plot will use the following colors for different optimizers.<br>\n",
-    "$\\hspace{2em}$ SGD - $\\color{blue}{blue}$<br>\n",
-    "$\\hspace{2em}$ SGD with Nesterov's momentum - $\\color{yellow}{yellow}$ <br>\n",
+    "$\\hspace{2em}$ GD - $\\color{blue}{blue}$<br>\n",
+    "$\\hspace{2em}$ GD with Nesterov's momentum - $\\color{yellow}{yellow}$ <br>\n",
     "$\\hspace{2em}$ RMSProp - $\\color{purple}{purple}$ <br>\n",
     "$\\hspace{2em}$ AdaGrad - $\\color{green}{green}$ <br>\n"
    ]
@@ -322,7 +334,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Subplots visualizing the minimization steps\n",
@@ -340,18 +354,18 @@
     "ax2.autoscale(False)\n",
     "\n",
     "# vanilla GD\n",
-    "for idx, (x,y,z) in enumerate(zip(opt_sgd_points_x, opt_sgd_points_y, opt_sgd_points_z)):\n",
-    "    if idx != len(opt_sgd_points_x)-1:\n",
+    "for idx, (x,y,z) in enumerate(zip(opt_gd_points_x, opt_gd_points_y, opt_gd_points_z)):\n",
+    "    if idx != len(opt_gd_points_x)-1:\n",
     "        ax1.scatter(x,y,z + epsilon , color='blue', alpha=(idx+10)/(n_steps+10.0), zorder=100)\n",
     "        ax2.scatter(np.asarray(x),np.asarray(y) , color='blue')\n",
     "    else:\n",
-    "        ax1.scatter(x,y,z + epsilon , color='blue', alpha=(idx+10)/(n_steps+10.0), label='SGD', zorder=100)\n",
-    "        ax2.scatter(x,y,z + epsilon , color='blue', label='SGD')\n",
+    "        ax1.scatter(x,y,z + epsilon , color='blue', alpha=(idx+10)/(n_steps+10.0), label='GD', zorder=100)\n",
+    "        ax2.scatter(x,y, color='blue', label='GD')\n",
     "\n",
     "# GD with momentum\n",
     "for idx, (x,y,z) in enumerate(zip(opt_mom_points_x, opt_mom_points_y, opt_mom_points_z)):\n",
     "    if idx != len(opt_mom_points_x)-1:\n",
-    "        ax1.scatter(x,y , color='yellow', alpha=(idx+10)/(n_steps+10.0), zorder=100)\n",
+    "        ax1.scatter(x,y , z + epsilon , color='yellow', alpha=(idx+10)/(n_steps+10.0), zorder=100)\n",
     "        ax2.scatter(x,y , color='yellow', alpha=(idx+10)/(n_steps+10.0))\n",
     "    else:\n",
     "        ax1.scatter(x,y,z + epsilon , color='yellow', alpha=(idx+10)/(n_steps+10.0), label='Momentum', zorder=100)\n",
@@ -423,7 +437,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -515,21 +531,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
