some answers, 1 left

--- a/Assignment9_aydan.ipynb
+++ b/Assignment9_aydan.ipynb
@@ -431,7 +431,9 @@
     "\n",
     "e) Without the max pooling layer, increase the strides for kernel1 to obtain an image size which is different from the result in d) by atmost one pixel in different dimensions. **(1.5 points)**\n",
     "\n",
-    "f) Elaborate on the differences between procedures followed by d) & e). Which one would you prefer and why? **(2 points)**\n",
+    "f) Elaborate on the differences between procedures followed by d) & e). Which one would you prefer and why? **(2 points)** <br>\n",
+    "\n",
+    "Convolution with a stride greater than one pixel is mathematically equivalent to convolution with unit stride followed by downsampling/pooling. The second approach (convolution + pooling) is computationally wasteful, because it computes many values that are then discarded. On the other side, if we have input of varying size and we need output of only one size (eg. for labeling an image), pooling is a popular strategy to achieve this.\n",
     "\n",
     "Note: For this assignment, you will need to install tensorflow and Pillow (do not install package named PIL) to work with the following code. Also, we will be working with a gray image converted to have one input and one output channel."
    ]
@@ -606,13 +608,17 @@
     "\n",
     "Following are statements that you should answer with either a True or a False. And, also provide a justification as to why you think so. To answer these questions, you will need to revisit the lecture slides and read the chapter 9 of the Deep learning book: [ConvNets](http://www.deeplearningbook.org/contents/convnets.html).\n",
     "\n",
-    "a) Pooling needs to be removed for handling inputs of varying size. \\[T/F\\] **(1 point)**\n",
+    "a) Pooling needs to be removed for handling inputs of varying size. \\[T/F\\] **(1 point)** **$\\rightarrow$ F **<br>\n",
+    "Pooling is important also for handling inputs of varying size. The size of the input to the classification layer should be of the same size. In order to achieve this, the size of the offset between pooling regions can be adapted accordingly.\n",
     "\n",
-    "b) Given a multilayered convolution neural network, a cell in a second convolutional layer has the same-sized receptive field as a cell in the first convolutional layer. \\[T/F\\] **(1 point)**\n",
+    "b) Given a multilayered convolution neural network, a cell in a second convolutional layer has the same-sized receptive field as a cell in the first convolutional layer. \\[T/F\\] **(1 point)** **$\\rightarrow$ T** <br>\n",
+    "The receptive fields/filter sizes coincide as the filter values are saved in a tensor (\"similar to slices stacked on top of each other\") and are applied to the same region of the input.\n",
     "\n",
-    "c) In the context of edge detection, a convolutional neural network learns features for each pixel separately. \\[T/F\\] **(1 point)**\n",
+    "c) In the context of edge detection, a convolutional neural network learns features for each pixel separately. \\[T/F\\] **(1 point)** **$\\rightarrow$ F** <br>\n",
+    "The feature learning is facilitated by the use of filters. Depending on the size of the filter, the features are computed from the receptive field of this size. In this case a neuron of the convolution layer is influenced by its corresponding receptive field in the input.\n",
     "\n",
-    "d) There is an exponential increase in kernel parameters when convolutional net's capabilities are increased to handle transformations like rotation, scaling etc. \\[T/F\\] **(1 point)**"
+    "d) There is an exponential increase in kernel parameters when convolutional net's capabilities are increased to handle transformations like rotation, scaling etc. \\[T/F\\] **(1 point)** **$\\rightarrow$ F** <br>\n",
+    "Convolution in combination with pooling can capture some deviations of the input from the training data, so there would be no need for an exponential increase of kernel parameters for that reason."
    ]
   },
   {
@@ -653,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
