--- a/Assignment9_aydan.ipynb
+++ b/Assignment9_aydan.ipynb
@@ -423,7 +423,7 @@
     "\n",
     "b) Then, use a new kernel (kernel2 = $\\left( \\begin{smallmatrix} 0& 1& 0\\\\ 1& -4& 1\\\\ 0& 1& 0\\end{smallmatrix} \\right)$) with appropriate strides with the same function below. Comment on any differences you see between the results obtained using `kernel1` and `kernel2`. **(1.5 points)**\n",
     "\n",
-    "**ANS** : Since the kernel size and strides increase, the output size decreases. The kernel functionalities are also different; kernel1 takes the difference between each pixel and its vertical neighbor, kernel2 on the other hand adds all neighboring pixels to each pixel but reducing the pixel's value by 4 times. We haven't use padding therefore applying 3x3 kernel and its correspondent stride reduces the dimensions.\n",
+    "Both kernels have the same purpose; edge detecting. However they have different effects, kernel2 takes all neighbors into account equally so the contours have the same shade everywhere, and the size of the kernel2 is bigger than kernel1 therefore it reduces 2 pixels per dimension. \n",
     "\n",
     "c) For the two kernels and the given image, calculate the number of operations performed to convolve the repsective kernel and the image (refer Fig 9.6 from **DL book**) . **(2 points)**\n",
     "\n",
@@ -659,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
