--- a/Assignment9_aydan.ipynb
+++ b/Assignment9_aydan.ipynb
@@ -425,7 +425,10 @@
     "\n",
     "Both kernels have the same purpose; edge detecting. However they have different effects, kernel2 takes all neighbors into account equally so the contours have the same shade everywhere, and the size of the kernel2 is bigger than kernel1 therefore it reduces 2 pixels per dimension. \n",
     "\n",
-    "c) For the two kernels and the given image, calculate the number of operations performed to convolve the repsective kernel and the image (refer Fig 9.6 from **DL book**) . **(2 points)**\n",
+    "c) For the two kernels and the given image, calculate the number of operations performed to convolve the repsective kernel and the image (refer Fig 9.6 from **DL book**) . **(2 points)**<br>\n",
+    "The input image is with size 218x250 and the output image with size: 218x249. <br>\n",
+    "Number of operations for kernel1: 218 x 249 x 3 = 162 846 (3 operations: 2 multiplications and one addition per pixel) <br>\n",
+    "Number of operations for kernel2: 218 x 249 x 17  = 922 794 (17 operations: 9 multiplications and 8 additions) <br>\n",
     "\n",
     "d) Next, copy the function `edge_detector` into `edge_detector2` and then implement a max pooling operation (with strides 2) on top of the convolution operation in the `edge_dectector` function and plot edge_detection result for `kernel1`. Use a pool size of 3 while pooling only the along the y axis. **(2 points)**\n",
     "\n",
@@ -659,7 +662,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
