--- a/Assignment9_aydan.ipynb
+++ b/Assignment9_aydan.ipynb
@@ -614,8 +614,8 @@
     "a) Pooling needs to be removed for handling inputs of varying size. \\[T/F\\] **(1 point)** **$\\rightarrow$ F **<br>\n",
     "Pooling is important also for handling inputs of varying size. The size of the input to the classification layer should be of the same size. In order to achieve this, the size of the offset between pooling regions can be adapted accordingly.\n",
     "\n",
-    "b) Given a multilayered convolution neural network, a cell in a second convolutional layer has the same-sized receptive field as a cell in the first convolutional layer. \\[T/F\\] **(1 point)** **$\\rightarrow$ T** <br>\n",
-    "The receptive fields/filter sizes coincide as the filter values are saved in a tensor (\"similar to slices stacked on top of each other\") and are applied to the same region of the input.\n",
+    "b) Given a multilayered convolution neural network, a cell in a second convolutional layer has the same-sized receptive field as a cell in the first convolutional layer. \\[T/F\\] **(1 point)** **$\\rightarrow$ F** <br>\n",
+    "The size of the receptive field depends on the size of the kernel. One can apply a kernel of the same size in the second layer, but one does not necessarily have to. \n",
     "\n",
     "c) In the context of edge detection, a convolutional neural network learns features for each pixel separately. \\[T/F\\] **(1 point)** **$\\rightarrow$ F** <br>\n",
     "The feature learning is facilitated by the use of filters. Depending on the size of the filter, the features are computed from the receptive field of this size. In this case a neuron of the convolution layer is influenced by its corresponding receptive field in the input.\n",
